--- a/index.html
+++ b/index.html
@@ -4,8 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Aula de Git</title>
+    <script src="./script.js" defer></script>
 </head>
 <body>
-    
+    <h1>Aula Com Git.</h1>
+    <h2>Primeiras Comandos em JavaScript</h2>
+    <h3>Senai Barueri</h3>
+
+   
 </body>
 </html>
